--- a/views/form_create_acc_public_key.erb
+++ b/views/form_create_acc_public_key.erb
@@ -1,11 +1,11 @@
 <%
   url_path = request.env['PATH_INFO'].to_s
-  shelley_ep = "/get-acc-pub-key"
-  shared_ep = "/shared-get-acc-pub-key"
+  shelley_ep = "/create-acc-pub-key"
+  shared_ep = "/shared-create-acc-pub-key"
 %>
 <div class="list-group">
   <div class="list-group-item">
-     Get account public key
+     Create account public key
      | <small><a href="<%= url_path.include?('shared')? "/shared-wallets/" : "/wallets/" %><%= wid %>">
              go back to wallet
            </a></small>
@@ -24,14 +24,25 @@
         </select>
       </div>
       <div class="form-group">
+        <label for="index">Index</label>
+        <input type="text" class="form-control" name="index" id="index"
+            placeholder="" value="<%= index %>">
+        <small id="help" class="form-text text-muted">Example: 1852H. An individual segment within a derivation path.</small>
+      </div>
+      <div class="form-group">
         <label for="role">Format</label>
         <select class="form-control" name="format" id="format">
           <option <%= "selected" if format == "extended" %> value="extended">extended</option>
           <option <%= "selected" if format == "non_extended" %> value="non_extended">non_extended</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="index">Passphrase</label>
+        <input type="text" class="form-control" name="pass" id="pass"
+            placeholder="Passphrase" value="Secure Passphrase">
+      </div>
 
-      <button type="submit" class="btn btn-success">Get public key</button>
+      <button type="submit" class="btn btn-success">Create public key</button>
     </form>
   </div>
 
