--- a/views/shared_wallet.erb
+++ b/views/shared_wallet.erb
@@ -40,6 +40,7 @@
                data-toggle="dropdown" href="#" role="button"
                aria-haspopup="true" aria-expanded="false">Keys</a>
              <div class="dropdown-menu">
+               <a class="dropdown-item" href="/shared-create-acc-pub-key?wid=<%= wal['id'] %>">Create account public key</a>
                <a class="dropdown-item" href="/shared-get-acc-pub-key?wid=<%= wal['id'] %>">Get account public key</a>
                <a class="dropdown-item" href="/shared-get-pub-key?wid=<%= wal['id'] %>">Get public key</a>
              </div>
