--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -92,6 +92,7 @@
                data-toggle="dropdown" href="#" role="button"
                aria-haspopup="true" aria-expanded="false">Keys</a>
              <div class="dropdown-menu">
+               <a class="dropdown-item" href="/create-acc-pub-key?wid=<%= wal['id'] %>">Create account public key</a>
                <a class="dropdown-item" href="/get-acc-pub-key?wid=<%= wal['id'] %>">Get account public key</a>
                <a class="dropdown-item" href="/get-pub-key?wid=<%= wal['id'] %>">Get public key</a>
                <a class="dropdown-item" href="/sign-metadata?wid=<%= wal['id'] %>">Sign Metadata</a>
