--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -54,6 +54,7 @@
              </a>
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/wallets-get-assets?wid=<%= id %>">List</a>
+               <a class="dropdown-item" href="/mint-to-address?wid=<%= id %>">Mint / Burn</a>
              </div>
            </div>
            <div>
