--- a/views/form_mint_to_multi_address.erb
+++ b/views/form_mint_to_multi_address.erb
@@ -59,14 +59,18 @@ wid = params[:wid] if params[:wid]
       <div class="form-group">
         <div class="form-group">
           <label for="operation">Operation</label>
-          <select class="form-control" name="operation" id="operation">
+          <!-- <select class="form-control" name="operation" id="operation">
             <option value="mint_to_self">mint to self</option>
             <option value="mint">mint to address</option>
             <option value="burn">burn</option>
-          </select>
+          </select> -->
+          <textarea class="form-control" name="operation" rows="6"></textarea>
+
         </div>
       </div>
-      <div class="form-group" id="address_part">
+      <%= render_metadata_form_part %>
+      <%= render_ttl_form_part %>
+      <!-- <div class="form-group" id="address_part">
         <label for="address">Address</label>
         <input type="text" class="form-control"
           name="address" id="address" placeholder="Address" value="">
@@ -75,7 +79,7 @@ wid = params[:wid] if params[:wid]
         <label for="amount">Amount</label>
         <input type="text" class="form-control"
           name="amount" id="amount" placeholder="Amount" value="">
-      </div>
+      </div> -->
 
 
       <%# render_addr_amt %>
