--- a/views/form_mint_to_multi_address.erb
+++ b/views/form_mint_to_multi_address.erb
@@ -8,15 +8,19 @@ wid = params[:wid] if params[:wid]
 <script type="text/javascript">
   $(function() {
       if($('#operation').val() == 'mint') {
-          $('#address_part').show();
+          $('#mint_many').show();
+          $('#amt').hide();
       } else {
-          $('#address_part').hide();
+          $('#amt').show();
+          $('#mint_many').hide();
       }
       $('#operation').change(function(){
           if($('#operation').val() == 'mint') {
-              $('#address_part').show();
+              $('#mint_many').show();
+              $('#amt').hide();
           } else {
-              $('#address_part').hide();
+              $('#amt').show();
+              $('#mint_many').hide();
           }
       });
   });
@@ -59,30 +63,28 @@ wid = params[:wid] if params[:wid]
       <div class="form-group">
         <div class="form-group">
           <label for="operation">Operation</label>
-          <!-- <select class="form-control" name="operation" id="operation">
+          <select class="form-control" name="operation" id="operation">
             <option value="mint_to_self">mint to self</option>
             <option value="mint">mint to address</option>
             <option value="burn">burn</option>
-          </select> -->
-          <textarea class="form-control" name="operation" rows="6"></textarea>
+          </select>
+          <!-- <textarea class="form-control" name="operation" rows="6"></textarea> -->
 
         </div>
       </div>
-      <%= render_metadata_form_part %>
-      <%= render_ttl_form_part %>
-      <!-- <div class="form-group" id="address_part">
-        <label for="address">Address</label>
-        <input type="text" class="form-control"
-          name="address" id="address" placeholder="Address" value="">
+
+      <div class="form-group" id="mint_many">
+        <%= render_addr_amt %>
       </div>
-      <div class="form-group">
+      <div class="form-group" id="amt">
         <label for="amount">Amount</label>
         <input type="text" class="form-control"
           name="amount" id="amount" placeholder="Amount" value="">
-      </div> -->
+      </div>
 
+      <%= render_metadata_form_part %>
+      <%= render_ttl_form_part %>
 
-      <%# render_addr_amt %>
 
       <button type="submit" class="btn btn-success">Send</button>
 
