--- a/views/form_tx_new_construct.erb
+++ b/views/form_tx_new_construct.erb
@@ -153,7 +153,7 @@ wid = params[:wid] if params[:wid]
 </script>
 <div class="list-group">
   <div class="list-group-item">
-    Construct Transaction
+    Construct Transaction 🛠️
     | <small><a href="<%= "/wallets/#{wid}" %>">
         go back to wallet
       </a></small>
@@ -282,7 +282,7 @@ wid = params[:wid] if params[:wid]
         <br/>
 
       </div>
-
+      <br/>
       <button type="submit" class="btn btn-success">Construct</button>
 
     </form>
