Byron construct and sign tx

--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -126,6 +126,7 @@
               Transactions
             </a>
             <div class="dropdown-menu">
+              <a class="dropdown-item" href="/construct-tx-byron?wid=<%= id %>">Construct</a>
               <a class="dropdown-item" href="/byron-tx-to-address?wid=<%= id %>">To single address</a>
               <a class="dropdown-item" href="/byron-tx-to-multi-address?wid=<%= id %>">To many addresses</a>
               <a class="dropdown-item" href="/byron-tx-fee-to-address?wid=<%= id %>">Fees</a>
