display payload errors

--- a/views/form_tx_new_balance.erb
+++ b/views/form_tx_new_balance.erb
@@ -68,4 +68,12 @@
 
     </form>
   </div>
+  <% if session[:error] %>
+        <div class="alert alert-danger" role="alert">
+          <%= session[:error]%>
+        </div>
+  <%
+        session.delete :error
+     end
+  %>
 </div>
