--- a/views/form_tx_new_sign.erb
+++ b/views/form_tx_new_sign.erb
@@ -19,9 +19,11 @@ function goBack() {
       </a></small>
   </div>
   <div class="list-group-item"  >
-    <b>Fee: </b> <%= "#{tx['fee']['quantity']} #{tx['fee']['unit']}" %>
-    <br/>
-    <br/>
+    <% if tx['fee'] %>
+      <b>Fee: </b> <%= "#{tx['fee']['quantity']} #{tx['fee']['unit']}" %>
+      <br/>
+      <br/>
+    <% end %>
     <form action="<%= url_path.include?('shelley') ? shelley_ep : byron_ep %>"
         method="POST">
       <div class="form-group">
