--- a/views/form_tx_new_sign.erb
+++ b/views/form_tx_new_sign.erb
@@ -44,6 +44,11 @@ function goBack() {
           <small id="tx">
               <%= response2table(tx) %>
           </small>
+          <% if decoded_tx %>
+          <small id="decoded_tx">
+              <%= response2table(decoded_tx) %>
+          </small>
+          <% end %>
         </code>
     </details>
 
