--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -42,6 +42,7 @@
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/construct-tx-shelley?wid=<%= id %>">Construct 🛠️</a>
                <a class="dropdown-item" href="/balance-tx-shelley?wid=<%= id %>">Balance ⚖️</a>
+               <a class="dropdown-item" href="/decode-tx-shelley?wid=<%= id %>">Decode 👀</a>
                <a class="dropdown-item" href="/tx-between-wallets?wid=<%= id %>">Between my wallets</a>
                <a class="dropdown-item" href="/tx-to-address?wid=<%= id %>">To single address</a>
                <a class="dropdown-item" href="/tx-to-multi-address?wid=<%= id %>">To many addresses</a>
