--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -189,9 +189,9 @@
              <a href="/<%= (url_path.include? "byron") ? "byron-wallets" : "wallets" %>/<%= id %>"><%= name %></a>
            </h5>
          </div>
-         <b>Balance:</b> (Total: <%= wal['balance']['total']['quantity'] %>
-                                , Available: <%= wal['balance']['available']['quantity'] %>
-                                <%= ", Rewards: #{wal['balance']['reward']['quantity']}" if wal['balance']['reward'] %>)
+         <b>Balance:</b> (Total: <%= as_ada wal['balance']['total']['quantity'] %>
+                                , Available: <%= as_ada wal['balance']['available']['quantity'] %>
+                                <%= ", Rewards: #{as_ada wal['balance']['reward']['quantity']}" if wal['balance']['reward'] %>)
          <br/>
           <%= render_assets(wal) %>
          <small><b>ID:</b> <%= id %></small><br/>
