--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -100,8 +100,12 @@
              <div class="dropdown-menu">
                <a class="dropdown-item" href="/create-acc-pub-key?wid=<%= wal['id'] %>">Create account public key</a>
                <a class="dropdown-item" href="/get-acc-pub-key?wid=<%= wal['id'] %>">Get account public key</a>
+               <div class="dropdown-divider"></div>
                <a class="dropdown-item" href="/get-pub-key?wid=<%= wal['id'] %>">Get public key</a>
                <a class="dropdown-item" href="/sign-metadata?wid=<%= wal['id'] %>">Sign Metadata</a>
+               <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="/get-policy-key?wid=<%= wal['id'] %>">Get policy key</a>
+               <a class="dropdown-item" href="/create-policy-key?wid=<%= wal['id'] %>">Create policy key</a>
              </div>
            </div>
 
