--- a/views/form_tx_new_construct.erb
+++ b/views/form_tx_new_construct.erb
@@ -403,15 +403,20 @@
             <details>
               <summary>Examplary template</summary>
                 <pre>
-{ "cosigners":
-  { "cosigner#0": "1423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db11423856bc91c49e928f6f30f4e8d665d53eb4ab6028bd0ac971809d514c92db2" },
-"template":
-    { "all":
-       [ "cosigner#0",
-         { "active_from": 120 }
-       ]
-    }
+cosigner#0
+
+{ "all": [ "cosigner#0" ] }
+
+{ "any": [ "cosigner#0" ] }
+
+{ "some": {"at_least": 1, "from": [ "cosigner#0" ]} }
+
+{ "all":
+     [ "cosigner#0",
+       { "active_from": 120 }
+     ]
 }
+
                 </pre>
             </details>
           </small>
