Support for policy id endpoint

--- a/views/form_tx_new_construct.erb
+++ b/views/form_tx_new_construct.erb
@@ -396,31 +396,7 @@
             placeholder="Amount" value="">
         </div>
 
-        <div class="form-group">
-          <label for="mint_policy_script">Policy Script Template</label>
-          <textarea class="form-control" name="mint_policy_script" id="mint_policy_script" rows="5"></textarea>
-          <small id="help_pay" class="form-text text-muted">
-            <details>
-              <summary>Examplary template</summary>
-                <pre>
-cosigner#0
-
-{ "all": [ "cosigner#0" ] }
-
-{ "any": [ "cosigner#0" ] }
-
-{ "some": {"at_least": 1, "from": [ "cosigner#0" ]} }
-
-{ "all":
-     [ "cosigner#0",
-       { "active_from": 120 }
-     ]
-}
-
-                </pre>
-            </details>
-          </small>
-        </div>
+        <%= render_policy_script_template_form_part %>
       </div>
 
       <div class="form-check">
