--- a/views/wallet.erb
+++ b/views/wallet.erb
@@ -105,6 +105,7 @@
                <div class="dropdown-divider"></div>
                <a class="dropdown-item" href="/get-policy-key?wid=<%= wal['id'] %>">Get policy key</a>
                <a class="dropdown-item" href="/create-policy-key?wid=<%= wal['id'] %>">Create policy key</a>
+               <a class="dropdown-item" href="/create-policy-id?wid=<%= wal['id'] %>">Create policy id</a>
              </div>
            </div>
 
