Initial support for construct tx from shared wallet

--- a/views/form_tx_new_sign.erb
+++ b/views/form_tx_new_sign.erb
@@ -19,7 +19,7 @@ function goBack() {
       </a></small>
   </div>
   <div class="list-group-item"  >
-    <% if decoded_tx['fee'] %>
+    <% if decoded_tx && decoded_tx['fee'] %>
       <b>Fee: </b> <%= "#{as_ada decoded_tx['fee']['quantity']}" %>
       <br/>
       <br/>
