--- a/views/shared_wallet.erb
+++ b/views/shared_wallet.erb
@@ -36,6 +36,19 @@
              </div>
            </div>
            <div>
+             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+               aria-expanded="false">Transactions</a>
+             <div class="dropdown-menu">
+                 <a class="dropdown-item <%= "disabled" if status == "incomplete" %>" href="/construct-tx-shared?wid=<%= id %>">
+                   Construct 🛠
+                  </a>
+
+               <!-- <a class="dropdown-item" href="/balance-tx-shared?wid=<%= id %>">Balance ⚖️</a>
+               <a class="dropdown-item" href="/decode-tx-shared?wid=<%= id %>">Decode 👀</a>
+               <a class="dropdown-item" href="/submit-tx-standalone-shared?wid=<%= id %>">Submit 🚀</a> -->
+             </div>
+           </div>
+           <div>
              <a class="nav-link dropdown-toggle"
                data-toggle="dropdown" href="#" role="button"
                aria-haspopup="true" aria-expanded="false">Keys</a>
