--- a/views/form_tx_new_construct.erb
+++ b/views/form_tx_new_construct.erb
@@ -2,8 +2,10 @@
   # wallets = wallets
   url_path = request.env['PATH_INFO'].to_s
   shelley_ep = "/construct-tx-shelley"
+  shared_ep = "/construct-tx-shared"
   byron_ep = "/construct-tx-byron"
   wid = params[:wid] if params[:wid]
+
 %>
 <script type="text/javascript">
   $(function() {
@@ -197,20 +199,21 @@
   <div class="list-group-item">
     Construct Transaction 🛠️
     | <small>
-      <a href="<%= url_path.include?('shelley') ? "/wallets/#{wid}" : "/byron-wallets/#{wid}" %>">
+      <a href="<%= back_to_wallet(url_path, wid) %>">
         go back to wallet
       </a></small>
   </div>
   <div class="list-group-item">
 
-    <form action="<%= url_path.include?('shelley') ? shelley_ep : byron_ep %>"
+    <form action="<%= pick_post_ep(url_path, byron_ep, shelley_ep, shared_ep) %>"
         method="POST">
       <div class="form-group">
         <label for="wid">Source Wallet</label>
         <select class="form-control" name="wid" id="wid">
           <% wallets.each do |w| %>
           <option <%= wid == w['id'] ? "selected" : "" %> value="<%= w['id'] %>">
-            <%= "#{w['name']} [id: #{w['id']}, balance available: #{w['balance']['available']['quantity']}]" %>
+            <%= "#{w['name']} [id: #{w['id']},
+            balance available: #{w['state']['status'] != "incomplete" ? w['balance']['available']['quantity'] : 'N/A'}]" %>
           </option>
           <% end %>
         </select>
@@ -262,8 +265,9 @@
             <div class="form-group">
               <label for="wid_dst">Destination Wallet</label>
               <select class="form-control" name="wid_dst" id="wid_dst">
-                <% wallets.each do |w| %>
-                <option value="<%= w['id'] %>"> <%= "#{w['name']} [id: #{w['id']}, balance total: #{w['balance']['total']['quantity']}]" %> </option>
+                <% wallets.select {|w| w['state']['status'] != 'incomplete'}.each do |w| %>
+                <option value="<%= w['id'] %>"> <%= "#{w['name']} [id: #{w['id']},
+                balance available: #{w['balance']['available']['quantity']}]" %> </option>
                 <% end %>
               </select>
               <small id="help" class="form-text text-muted">I will pick up an unused address from that wallet and send funds to it.</small>
